--- a/index.html
+++ b/index.html
@@ -13,9 +13,25 @@
       <nav class="header__nav">
         <div class="header__logo">
           <h4>Sachi's Kitchen</h4>
-          <div class="header__logo-overlay"></div>
+          <div class="header__logo-overlay">
+            <li>
+              <a href="#menu">menu</a>
+            </li>
+            <li>
+              <a href="#food">food</a>
+            </li>
+            <li>
+              <a href="#services">services</a>
+            </li>
+            <li>
+              <a href="#about-us">about us</a>
+            </li>
+            <li>
+              <img src="assets/search.svg" />
+            </li>
+          </div>
         </div>
-        <ul class=" "></ul>
+        <ul class="header__menu"></ul>
       </nav>
     </header>
     <script src="js/script.js" type="module"></script>
