--- a/index.html
+++ b/index.html
@@ -12,28 +12,46 @@
     <header>
       <nav class="header__nav">
         <div class="header__logo">
-          <h4>Sachi's Kitchen</h4>
-          <div class="header__logo-overlay">
-            <li>
-              <a href="#menu">menu</a>
-            </li>
-            <li>
-              <a href="#food">food</a>
-            </li>
-            <li>
-              <a href="#services">services</a>
-            </li>
-            <li>
-              <a href="#about-us">about us</a>
-            </li>
-            <li>
-              <img src="assets/search.svg" />
-            </li>
-          </div>
+          <h4 data-aos="fade-down">Sushiman</h4>
+          <div class="header__logo-overlay"></div>
         </div>
-        <ul class="header__menu"></ul>
+
+        <ul class="header__menu" data-aos="fade-down">
+          <li>
+            <a href="#menu">Menu</a>
+          </li>
+          <li>
+            <a href="#food">Food</a>
+          </li>
+          <li>
+            <a href="#services">Services</a>
+          </li>
+          <li>
+            <a href="#about-us">About Us</a>
+          </li>
+          <li>
+            <img src="assets/search.svg" alt="search" />
+          </li>
+        </ul>
+
+        <ul class="header__menu-mobile" data-aos="fade-down">
+          <li>
+            <img src="assets/menu.svg" alt="menu" />
+          </li>
+        </ul>
       </nav>
     </header>
+    <section class="hero">
+      <div class="hero-image">
+        <img src="assets/sushi-1.png" alt="sushi" />
+        <h2>
+          日<br />
+          本<br />
+          食
+        </h2>
+        <div class="hero-image__overlay"></div>
+      </div>
+    </section>
     <script src="js/script.js" type="module"></script>
   </body>
 </html>
