--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </header>
     <section class="hero">
       <div class="hero-image">
-        <img src="assets/sushi-1.png" alt="sushi" />
-        <h2>
+        <img src="assets/sushi-1.png" alt="sushi" data-aos="fade-up"/>
+        <h2 data-aos="fade-up">
           日<br />
           本<br />
           食
@@ -52,7 +52,7 @@
         <div class="hero-image__overlay"></div>
       </div>
       <div class="hero-content">
-        <div class="hero-content-info">
+        <div class="hero-content-info" data-aos="fade-left">
           <h1>Feel the taste of Japanese food</h1>
           <p>
             Feel the taste of the most popular Japanese food from anywhere and
@@ -95,7 +95,7 @@
         </div>
       </div>
   
-      <div class="about-us__content" >
+      <div class="about-us__content" data-aos="fade-left" >
         <p class="sushi__subtitle">About Us / 私たちに関しては</p>
         <h3 class="sushi__title">
           Our mission is to bring true Japanese flavours to you.
