--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
     </button>
   </section>
   <!-- END: popular foods -->
+  <section class="trending" id="food">
+      <div class="trending__content" data-aos="fade-right">
+        <p class="sushi__subtitle">What’s Trending / トレンド</p>
+      </div>
+  </section>
 
 
     <script src="js/script.js" type="module"></script>
