--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
   </section>
   <!-- END: popular foods -->
   <section class="trending" id="food">
+    <section class="trending-sushi">
       <div class="trending__content" data-aos="fade-right">
         <p class="sushi__subtitle">What’s Trending / トレンド</p>
         <h3 class="sushi__title">Japanese Sushi
@@ -244,6 +245,8 @@
           <img src="assets/arrow-horizontal.svg" alt="arrow horizontal" />
         </div>
       </div>
+    </section>
+      
   </section>
 
   <div class="trending__discover" data-aos="zoom-in">
